--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,42 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+:root {
+  font-family: system-ui, Helvetica, Arial, sans-serif;
+
+  color: rgba(255, 255, 255, 0.87);
+  background-color: rgb(4, 4, 53);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+body {
   text-align: center;
 }
 
+.heading {
+  margin: 30px 0;
+}
 
+
+.input-box {
+  width: 100%;
+  border-radius: 50px;
+  padding: 20px 30px;
+  font-size: 25px;
+  border: none;
+  transition: 0.2s;
+  box-shadow: inset 0 0 5px rgb(179, 179, 190);
+}
+
+.input-box:focus {
+  box-shadow: 0 0 10px 1000px black;
+  outline: none;
+}
+
+.button {
+  margin: 30px 0;
+  padding: 5px;
+  height: 40px;
+  width: 150px;
+  font-size: 20px;
+  border-radius: 20px;
+}
