--- a/src/App.css
+++ b/src/App.css
@@ -46,8 +46,8 @@ body {
 .todo {
   display: flex;
   align-items: center;
-  max-width: 100%; /* Adjust as needed */
-  padding: 10px; /* Adjust spacing */
+  max-width: 100%; 
+  padding: 10px; 
   margin: 10px;
   background-color: yellow;
   color: black;
@@ -55,11 +55,11 @@ body {
 }
 
 .todo-single {
-  flex: 1; /* Allow the text to flex and take available space */
+  flex: 1;
   padding: 5px;
   border: none;
   font-size: 20px;
-  word-wrap: break-word; /* Allow text wrapping */
+  word-wrap: break-word; 
 }
 
 .icon {
@@ -70,11 +70,11 @@ body {
 
 @media (max-width: 600px) {
   .todo {
-    flex-direction: column; /* Stack todo items vertically */
-    text-align: center; /* Center text within todo items */
+    flex-direction: column;
+    text-align: center;
   }
 
   .todo-single {
-    width: 100%; /* Take full width within the container */
+    width: 100%;
   }
 }
